openapi und rootcontroller verbessert
